restructure project to use with modules

--- a/angular.json
+++ b/angular.json
@@ -58,6 +58,7 @@
             ],
             "styles": [
               "node_modules/driver.js/dist/driver.min.css",
+              "src/styles.less",
               {
                 "input": "src/styles/default.less",
                 "bundleName": "default",
